--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "^13.3.1",
     "@angular/platform-browser-dynamic": "^13.3.1",
     "@angular/router": "^13.3.1",
-    "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.1",
     "@popperjs/core": "^2.11.4",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.29.1",
